# nomad_ai_agent

./: .gitignore
chatgpt-clone/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chat-gpt-clone-memory.db  chat-gpt-clone-memory.db-shm  chat-gpt-clone-memory.db-wal  dummy-agent.ipynb  main.py
content-pipeline-agent/: contentPipelineAgent.py  main.py  seo_crew.py  virality_crew.py
customer-support-agent/: audio_main.py  chat-gpt-clone-memory.db  chat-gpt-clone-memory.db-shm  chat-gpt-clone-memory.db-wal  customer-support-memory.db  customer-support-memory.db-shm  customer-support-memory.db-wal  main.py  model.py  output_guardrails.py  tool.py  workflow.py
email-refiner-agent/: api_mode.ipynb  code_mode.ipynb  deploy.py  pyproject.toml  remote.py  session.db
financial-analyst/: pyproject.toml  tools.py
financial-analyst/financial_advisor/: agent.py
financial-analyst/financial_advisor/.adk/: session.db
financial-analyst/financial_advisor/.adk/artifacts/users/user/sessions/395967d0-ad16-441f-a43a-f67dca4d5b45/artifacts/NET_investment_advice.md/versions/0/: NET_investment_advice.md  metadata.json
financial-analyst/financial_advisor/sub_agents/: data_analyst.py  financial_analyst.py  news_analyst.py
financial-analyst/test_agent/: agent.py
financial-analyst/test_agent/.adk/: session.db
grok_deep_research_agent/: deep_research-team.ipynb  email-optimizer-team.ipynb  report.md
job-hunter-agent/: jobHunterAgent.py  main.py  models.py  tools.py
my-first-agent/: main.ipynb
news-reader-agent/: main.py  newsReader.py  pyproject.toml  tools.py
(+156 files in other folders)
